--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "dotenv": "^17.3.1",
     "eleventy-plugin-embed-everything": "^1.16.0",
     "holygrailcss": "^2.2.35",
     "markdown-it": "^13.0.1",
